applied changes on  Clients.scss by removing unnecessary code and setted the overflow-x on Resources.scss to hidden to stop the table from scroll left and right

--- a/src/pages/Clients/Clients.scss
+++ b/src/pages/Clients/Clients.scss
@@ -3,7 +3,6 @@
 
 .clients-container {
   background-color: #ebebf5;
-  height: 100vh;
 
   &__mobile {
     display: none;
