--- a/src/pages/Resources/Resources.scss
+++ b/src/pages/Resources/Resources.scss
@@ -17,6 +17,7 @@
 
   .data-wrap {
     overflow-y: auto;
+    overflow-x: hidden;
     height: 400px;
   }
 }
